# coursework_OOP

./: README.md  pyproject.toml
src/: main.py  utils.py  vacancies.json
tests/: test_class.py  test_main.py  test_utils.py
